# focaccia

./: .gitignore  .gitmodules  README.md  arancini.py  compare.py  flake.nix  focaccia.py  gen_trace.py  interpreter.py  lldb_target.py  main.py  miasm_test.py  miasm_util.py  nix.shell  parser.py  pyproject.toml  run.py  snapshot.py  symbolic.py  test.py  trace_symbols.py  utils.py
arch/: __init__.py  arch.py  x86.py
focaccia/: compare.py  lldb_target.py  match.py  miasm_util.py  parser.py  reproducer.py  snapshot.py  symbolic.py  utils.py
focaccia/arch/: __init__.py  aarch64.py  arch.py  x86.py
reproducers/: issue-1370.c  issue-1371.c  issue-1372.c  issue-1373.c  issue-1374.c  issue-1375.c  issue-2175.c  issue-508.c
src/focaccia/: miasm_util.py  parser.py  trace.py
src/focaccia/tools/: validate_qemu.py
test/: test_sparse_memory.py
tests/: test_snapshot.py  test_sparse_memory.py
tools/: _qemu_tool.py  capture_transforms.py  convert.py  invoke_qemu_tool.py  qemu_tool.py  verify_qemu.py
wrappers/cpuid-wrapper/: pyproject.toml
wrappers/cpuid-wrapper/cpuid.egg-info/: PKG-INFO
